--- a/FT_Deque/Makefile
+++ b/FT_Deque/Makefile
@@ -8,7 +8,7 @@ CFLAGS = -Wall -Wextra -Werror
 AR = ar
 ARFLAGS = -src
 
-SRCS = ft_deque.c
+SRCS = ft_deque_access.c ft_deque_control.c ft_deque_push.c ft_deque.c ft_dqnode.c
 
 OBJS = $(SRCS:.c=.o)
 
