refactoring ft_string

--- a/ft_string/Makefile
+++ b/ft_string/Makefile
@@ -8,8 +8,9 @@ CFLAGS = -Wall -Wextra -Werror
 AR = ar
 ARFLAGS = -src
 
-SRCS = ft_string.c ft_string_access.c ft_string_control.c \
-		ft_string_generate.c ft_string_utility.c\
+SRCS = ft_string_access.c ft_string_construct.c ft_string_control.c \
+		ft_string_generate.c ft_string_new.c ft_string_set_member_function.c \
+		ft_string_utility.c\
 
 OBJS = $(SRCS:.c=.o)
 
