fix makefile for examples

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -6,13 +6,13 @@ DEQUEUE_WITH_STRING_SAMPLE = deque_with_string_sample
 
 # compiler
 CC = cc
-CFLAGS = -Wall -Wextra -Werror
+CFLAGS =
 
 all: $(STRING_SAMPLE) $(VEC_WITH_STRING_SAMPLE) $(VEC_WITH_CUSTOM_SAMPLE) $(DEQUEUE_WITH_STRING_SAMPLE)
 
 STRING_DIR = ../ft_string
 VECTOR_DIR = ../ft_vector
-DEQUEUE_DIR = ../deque
+DEQUEUE_DIR = ../ft_deque
 
 $(STRING_SAMPLE) :
 	$(MAKE) -C ../ft_string
@@ -27,7 +27,7 @@ $(VEC_WITH_CUSTOM_SAMPLE) :
 	$(MAKE) -C ../ft_vector
 	$(CC) $(CFLAGS) vec_test.c -L../ft_vector -lftvector -o $@
 
-$(DEQUEUE_WITH_STRING_SAMPLE ) :
+$(DEQUEUE_WITH_STRING_SAMPLE) :
 	$(MAKE) -C ../ft_string
 	$(MAKE) -C ../ft_deque
 	$(CC) $(CFLAGS) deque_test.c -L../ft_deque -lftdeque -L../ft_string -lftstring -o $@
@@ -39,7 +39,10 @@ clean:
 	rm -f $(OBJS)
 
 fclean: clean
-	rm -f $(NAME)
+	rm -f $(STRING_SAMPLE)
+	rm -f $(VEC_WITH_STRING_SAMPLE)
+	rm -f $(VEC_WITH_CUSTOM_SAMPLE)
+	rm -f $(DEQUEUE_WITH_STRING_SAMPLE)
 
 re: fclean all
 
